fixed some issues

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
   <h1>Battleship</h1>
-<p>Click your grid to place ships. Press "R" to rotate.</p>
+  <p>Click your grid to place ships. Press "R" to rotate.</p>
 
-<div id="boards">
-  <div id="player-board" class="board"></div>
-  <div id="enemy-board" class="board"></div>
-</div>
+  <div id="boards">
+    <div id="player-board" class="board"></div>
+    <div id="enemy-board"  class="board"></div>
+  </div>
 
-<script type="module" src="main.js"></script>
-
+  <!-- ES Modülü olarak yükle -->
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
